--- a/client/client/src/Components/home/Home.css
+++ b/client/client/src/Components/home/Home.css
@@ -3,12 +3,12 @@
 }
 
 .lead-home{
-    color:rgb(255, 22, 205);
+    color:rgb(247, 54, 183);
     line-height: 40px;
     font-weight: bold;
     margin-top: 120px;
     
 }
 body{
-    background-color:#d6dbff;
+    background-color:#EEF7FF;
 }
