--- a/client/client/src/Components/signin/Signin.css
+++ b/client/client/src/Components/signin/Signin.css
@@ -14,12 +14,13 @@
     text-align: center;
   }
   form {
-    background-color: rgb(142, 101, 255);
+    background-color:#9f93ff;
     color: white;
     padding: 10px;
     border-radius: 10px;
     width: 500px;
     text-align: center;
+    box-shadow: 5px 5px 5px rgb(159, 159, 159);
     display: block;
     margin: auto;
   }
